# gale-hmi-app

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  prj.conf  sysbuild.conf
boards/: nrf5340bsim_nrf5340_cpuapp.overlay  nrf54l15bsim_nrf54l15_cpuapp.overlay
boards/common/: common.dtsi  i2c_emul.dtsi  lfs_fstab.dtsi  nrf5340_ipc.dtsi  partitions.dtsi
include/: cpp_shell_args.hpp
include/tests/: debugging.hpp  devicetree.hpp  emulation.hpp  storage.hpp  toys.hpp
src/: main.cpp
src/tests/: cplusplus.cpp  cpp.cpp  cpp.hpp  debugging.cpp  devicetree.cpp  emulation.cpp  multicore.cpp  storage.cpp  toys.cpp
